--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,17 +32,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-  google_fonts: ^3.0.1
+  google_fonts: ^6.2.1
   dartz: ^0.10.1
-  provider: ^6.0.2
-  flutter_screenutil: ^5.3.1  #for adaptive_ui
+  provider: ^6.1.1
+  flutter_screenutil: ^5.9.0  #for adaptive_ui
   fluro: ^2.0.3 #for routing
   get_it: ^7.2.0  #dependency-injection
   shared_preferences: ^2.0.13
-  http: ^0.13.5
-  connectivity_plus: ^3.0.2
-  permission_handler: ^10.0.1
+  http: ^1.2.0
+  connectivity_plus: ^5.0.2
+  permission_handler: ^11.3.0
   logger: ^1.1.0
+  fluttertoast: ^8.2.4
+  cached_network_image: ^3.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
