--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.your_org.your_project_id.flutter_oilerplate_code">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="The Ghost Code"
         android:name="${applicationName}"
