--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   fluttertoast: ^8.2.4
   cached_network_image: ^3.3.1
 
+  ar_location_view: ^2.0.10
+  geolocator: ^11.0.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
