--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,12 @@ dependencies:
   ar_location_view: ^2.0.10
   geolocator: ^11.0.0
 
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  firebase_messaging: ^14.7.9
+  cloud_firestore: ^4.13.6
+  firebase_storage: ^11.6.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
