--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/gifs/
     - google_fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
