--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
 
   ar_location_view: ^2.0.10
   geolocator: ^11.0.0
+  dotted_border: ^2.0.0+2
 
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
